
--------------------------- To-do -----------------------------
Bugs
- Artillery stations are stuck in perma-repair on game start and never repair themselves

Requests
- Add keyboard shortcuts to all indEvo industry menu points
- Make it so if we kill the artillery station we can convert its husk into a outpost without having to colonize the planet
- Watchtowers buildable in stable loc

Upcoming
- "Mimic Hulls", Derelict ships that change into remnant or pirate ambush fleets when approached
- Consumable item that makes your fleet look bigger than is is to NPCs
    - maybe add a boat with like 200 dp to the fleet and remove it when ui window is opened so other fleets run from you
- Consumable item that allows forced targetting of artillery on mouse pos
- Add something that lets you remove S-Mods
- Change derelict industries to superstructures
- Artillery industry images
- add roaming derelict fleets to uninhabited arty systems
- Casino
    - Blackjack
    - Roulette
    - Slot machines
    - add "spacer captain in debt" bar event: sells his last ship for half off to pay his debt
    - add "officer in debt" bar event - hire for 3x salary
    - add "spacers in debt" bar event - 10 spacers, hire for half pay to avoid indentured servitude


--------------------------- known issues without fix -----------------------------

Added - Behaviour: Deliver (Transports cargo to planet, delivers it into storage, then returns to your fleet)
DELIVER FLEETS REFUSE TO LEAVE SYSTEM AFTER DELIVERY; MAYBE MOVE INTO HYPERSPACE OR MANUALLY SET MOVE TARGET?

There are some bugs with detachments crashing

hey with the current IndEvo patch all my crew in the detachment are getting eaten up after a day has passed.
 The pattern is 1 full day after creating the detachment.
 So if I create the detachment half way through Feb 19th, the crew disappear when it turns Feb 21st.
