@@ -98,7 +98,7 @@ IndEvo_BaseFlavourInd,World Symbols,,,,,,,"flavor, parent_item, structure, unrai
 IndEvo_LightPalace,Modern Palace,100,90,,10,,,"flavor, sub_item, structure, unraidable",,graphics/industry/flavour/palace_light.png,indevo.industries.worldwonder.industry.WorldWonder,"An opulent, bright, modern palace, built to include every luxury known to man. This extraordinarily expensive compound, while not intended to benefit the general populace, still inspires awe and hope for a better future in anyone fortunate enough to be born on a planet able to support such a wonder.
 
 Causes recent unrest on this planet to decay at a rate of one point per month, and increases the stability of all planets in the system by 1.",110
-IndEvo_DarkPalace,Dark Palace,100,90,,10,,,"flavor, sub_item, structure, unraidable",,graphics/industry/flavour/palace_dark.png,indevo.industries.worldwonder.industry.WorldWonder,"An dark, almost oppressive palace, built in a modern interpretation of gothic architecture. This extraordinarily expensive compound, while not constructed to the benefit of anyone other than the high echelons of society, still inspires awe in anyone fortunate enough to be born on a planet able to support such a waste of ressources - and enough fear to keep anyone thinking otherwise silent.
+IndEvo_DarkPalace,Dark Palace,100,90,,10,,,"flavor, sub_item, structure, unraidable",,graphics/industry/flavour/palace_dark.png,indevo.industries.worldwonder.industry.WorldWonder,"An dark, almost oppressive palace, built in a modern interpretation of gothic architecture. This extraordinarily expensive compound, while not constructed to the benefit of anyone other than the high echelons of society, still inspires awe in anyone fortunate enough to be born on a planet able to support such a waste of resources - and enough fear to keep anyone thinking otherwise silent.
 
 Causes recent unrest on this planet to decay at a rate of one point per month, and increases the stability of all planets in the system by 1.",110
 IndEvo_Memorial,Memorial,100,90,,10,,,"flavor, sub_item, structure, unraidable",,graphics/industry/flavour/memorial.png,indevo.industries.worldwonder.industry.WorldWonder,"A memorial spanning the size of a small country. This is the ultimate tribute, a testament to an occasion or a person, built to last the ages. People from all over the sector travel here to pay respects and remember.
