@@ -4,6 +4,7 @@ Bugs
 - Artillery stations are stuck in perma-repair on game start and never repair themselves
 
 Requests
+- Make Lab switch the chosen commodity output for beta core bonus somehow
 - Add keyboard shortcuts to all indEvo industry menu points
 - Make it so if we kill the artillery station we can convert its husk into a outpost without having to colonize the planet
 - Watchtowers buildable in stable loc
@@ -62,6 +63,7 @@ General
 Added - Planet Jump listener, interface to notify when a planet has finished jumping via rift generator
 
 Minefields
+Added - Tooltip showing controlling entity
 Fixed - Damage halved and now scales with fleet size up to (hit chance is still fleet size and speed)
 
 Items
